# AxiomFlow

./: .gitignore  README.md  test.txt
axiomflow-api/: .env  .env.example  README.md  axiomflow.py  celerybeat-schedule.bak  env.example  migrate_add_json_data.py  migrate_json_data_to_longtext.py  migrate_remove_email_verified.py  package-lock.json  pyproject.toml  requirements.txt
axiomflow-api/app/: celery_app.py  main.py  repo.py  repo_mysql.py
axiomflow-api/app/api/: deps.py  router.py
axiomflow-api/app/core/: .rate_limit_env  auth_db.py  config.py  config_manager.py  dependencies.py  email_service.py  ids.py  jwt_utils.py  limiter.py  observability.py  security.py  two_factor_auth.py  user_db.py
axiomflow-api/app/db/: bootstrap.py  schema.py  session.py
axiomflow-api/app/models/: __init__.py  _mixins.py  api_key.py  domain.py  email_token.py  password_reset_token.py  refresh_token.py  translation_activity.py  user.py  user_document.py
axiomflow-api/app/routers/: assets.py  auth.py  batch.py  documents.py  downloads.py  export.py  glossary.py  health.py  health_observability.py  jobs.py  metrics.py  projects.py  settings.py  terms_suggest.py  users.py  websocket.py
axiomflow-api/app/schemas/: auth.py  glossary.py  jobs.py  projects.py
axiomflow-api/app/services/: assets_extract.py  ocr.py  (+35 more)
axiomflow-api/axiomflow_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
axiomflow-api/docs/: frontend-integration.md
axiomflow-api/scripts/: smoke.ps1  smoke.sh  start_celery_worker.py  start_celery_worker.sh  start_uvicorn.py
(+82 files in other folders)
