[project]
name = "axiomflow-api"
version = "0.1.0"
description = "AxiomFlow backend API (FastAPI-based scientific PDF translation service)"
authors = [{ name = "You" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "pymysql>=1.1.0",
    "cryptography>=41.0.0",
    "pymupdf>=1.24.0",
    "pikepdf>=8.0.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "fonttools>=4.0.0",
    "pdfminer.six>=20221105",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "ollama>=0.1.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "bcrypt>=4.0.0",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]
ocr = [
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
    "paddleocr>=2.7.0",
]
all = [
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
    "paddleocr>=2.7.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
axiomflow = "axiomflow:main"

[tool.setuptools]
py-modules = ["axiomflow"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["storage*", "tests*"]


